# Quotes

./: .cirrus.yml  .gitignore  Cargo.toml  Gemfile  README.md  README.mkdn  Rocket.toml  Rocket.toml.sample  config.ru  config.yml.example  console  exportdb.rb  generate_sample_db.rb  quote_helpers.rb  quotes.rb  quotes2db.rb  thin.yml  view_helpers.rb
backend/: config.ru  gravatar_helpers.rb  models.rb  quotes.rb  quotes2db.rb
backend/lib/migrations/: 001_create_users_table.rb
backend/old/: migrate.rb
backend/old/lib/migrations/: 001_create_users_table.rb  002_create_quotes_table.rb  003_create_ratings_table.rb
backend/templates/: index.mustache  user.mustache
backend/views/: index.erb  index.rb
migrations/: V1__create_users.sql  V2__create_quotes.sql  V3__create_ratings.sql  V4__add_indexes.sql
models/: models.rb  quote.rb  rating.rb  user.rb
public/: quotes.css  style.css
public/css/: style.css
src/: auth.rs  db.rs  email.rs  lib.rs  main.rs  quotes.rs  resetpass.rs  user.rs
templates/: allquotes.html.tera  analytics_partial.mustache  forgotpass.html.tera  home.html.tera  index.mustache  layout.html.tera  layout.mustache  login.html.tera  login.mustache  logout.html.tera  macros.html.tera  nav.html.tera  new_quote.mustache  quote.mustache  quote_partial.mustache  quotes.html.tera  quotes_partial.mustache  ratequote.html.tera  resetpass.html.tera  setpass.html.tera  user.mustache  userprofile.html.tera
views/: index.rb  layout.rb  login.rb  new_quote.rb  quote.rb  user.rb
