[package]
name = "quotes"
version = "0.1.0"
edition = "2018"
default-run = "quotes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.1", default-features = false, features = ["std", "clock"]} # needs to match tera
getrandom = "0.2.3"
gumdrop = "0.8.0"
mailgun-sdk = "0.1.1"
refinery = { version = "0.6", features = ["rusqlite"] }
rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
rusqlite = "0.25.3"
rust-argon2 = { version = "0.8.0", default-features = false }
time = { version = "0.2.11", default-features = false, features = ["std"] } # needs to match cookie in Rocket

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["sqlite_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
